--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Egemen Erin</title>
 </head>
 <body>
-    <h1>Summary</h1>
+    <h1>Egemen Erin</h1>
+    <img class="img_deg" src="./assests/EgemenFotoE1.jpeg" height="160">
+    <h1>Summary 🙋‍♂️</h1>
     <hr/>
     <br>
         <h2>Hello, my name is Egemen Erin.</h2>
         <p>I am a hard-working, creative and proactive. aspiring Fullstack Developer. Ambitious, eager to keep growing and evolving in my profession. Constantly developing new skills and abilities.</p>
+        <a href="./public/contact.html">Contact Me!</a>
     <br>
-    <h1>Education</h1>
+    <h1>Education 🏫</h1>
     <hr/>
     <br>
         <h2>WSB University in Poznan</h2>
@@ -28,7 +31,44 @@
             </ul>
         <h2>Harvard CS50X</h2>
             <h3>2023 - Present</h3>
-            <ul>Online Education with Certification</ul>
-    <br>
+            <ul>
+                <li>Online Education with Certification</li>
+            </ul>
+    <br/>
+    <h1>Certifications 📜</h1>
+    <hr/>
+    <br/>
+    <h2>Google's Crash Course on Python</h2>
+    <ul>
+        <li>Issued Jan 2023</li>
+        <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/ZE9KGDQGCMGR">ZE9KGDQGCMGR</a></li>
+    </ul>
+    <h2>Google's Foundation of Project Management</h2>
+    <ul>
+        <li>Issued Jan 2023</li>
+        <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/F9DFS8WWBYG9">F9DFS8WWBYG9</a></li>
+    </ul>
+    <h2>Turkcell Geleceği Yazanlar C# and Unity Bootcamp</h2>
+    <ul>
+        <li>Issued Jan 2023</li>
+        <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkMzYwNDFxaWQxMjZlbmQ=">Credential C#</a></li>
+        <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkNTc2cWlkNjNlbmQ">Credential Unity</a></li>
+    </ul>
+    <h2>IELTS Academic B2</h2>
+    <br/>
+    <h1>Skills And Languages ⭐️</h1>
+    <hr/>
+    <br/>
+    <ul>
+        <li>C, C#, Python, HTML, Shell</li>
+        <li>Project Management, Problem Solving, Strategic Thinking and Creative Writing</li>
+        <li>Unity, Blender and Photoshop</li>
+        <br/>
+        <li>Native Turkish</li>
+        <li>B2 English</li>
+        <li>A1 Japanese</li>
+        <li>A1 German</li>
+    </ul>
+
 </body>
 </html>
