--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,20 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Contact Me ☎️</h1>
+<p>Tel: +48 516112852</p>
+<p>Email: egemeneriin@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Osiedle Stare Zegrze 181 lok 15<br />
+  Poznan, 61-249<br />
+  Poland<br />
 </p>
+  
+</body>
+</html>
