--- a/index.html
+++ b/index.html
@@ -3,72 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egemen Erin</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Egemen Erin</h1>
-    <img class="img_deg" src="./assests/EgemenFotoE1.jpeg" height="160">
-    <h1>Summary 🙋‍♂️</h1>
-    <hr/>
-    <br>
-        <h2>Hello, my name is Egemen Erin.</h2>
-        <p>I am a hard-working, creative and proactive. aspiring Fullstack Developer. Ambitious, eager to keep growing and evolving in my profession. Constantly developing new skills and abilities.</p>
-        <a href="./public/contact.html">Contact Me!</a>
-    <br>
-    <h1>Education 🏫</h1>
-    <hr/>
-    <br>
-        <h2>WSB University in Poznan</h2>
-            <h3>2022 - Present</h3>
+    <div class="ana-box">
+        <div class="foto">
+            <img src="./assets/image.jpeg"><img/>
+        </div>
+        <h1>Egemen Erin</h1>
+            <h2>Software Developer</h2>
+                <p>Hard-working, creative and proactive. Aspiring Web Developer. Ambitious, eager to keep growing and evolving in my profession. Constantly developing new skills and abilities.</p>
+    </div>
+    <div class="education">
+        <h1>Education</h1>
+            <hr/>
+            <h2>WSB University in Poznan</h2>
+                <h3>2022 - Present</h3>
+                <ul>
+                    <li>Computer Science</li>
+                    <li>Poland, Poznan</li>
+                </ul>
+            <h2>Ugur High School</h2>
+                <h3>2016 - 2020</h3>
+                <ul>
+                   <li>Turkey, Çerkezköy</li>
+                </ul>
+            <h2>HARVARD CS50X</h2>
+                <h3>2023 - Present</h3>
+                <ul>
+                    <li>Online Education with Certification</li>
+                </ul>
+    </div>
+    <div class="certifications">
+        <h1>Certifications</h1>
+        <hr/>
+        <h2>Google's Crash Course on Python</h2>
             <ul>
-                <li>Computer Science</li>
-                <li>Poland, Poznan</li>
+                <li>Issued Jan 2023</li>
+                <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/ZE9KGDQGCMGR">ZE9KGDQGCMGR</a></li>
             </ul>
-        <h2>Ugur High School</h2>
-            <h3>2016 - 2020</h3>
+        <h2>Google's Foundation of Project Management</h2>
             <ul>
-                <li>Turkey, Tekirdağ</li>
+               <li>Issued Jan 2023</li>
+               <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/F9DFS8WWBYG9">F9DFS8WWBYG9</a></li>
             </ul>
-        <h2>Harvard CS50X</h2>
-            <h3>2023 - Present</h3>
+        <h2>Turkcell Geleceği Yazanlar C# and Unity Bootcamp</h2>
             <ul>
-                <li>Online Education with Certification</li>
+                <li>Issued Jan 2023</li>
+                <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkMzYwNDFxaWQxMjZlbmQ=">Credential C#</a></li>
+                <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkNTc2cWlkNjNlbmQ">Credential Unity</a></li>
             </ul>
-    <br/>
-    <h1>Certifications 📜</h1>
-    <hr/>
-    <br/>
-    <h2>Google's Crash Course on Python</h2>
-    <ul>
-        <li>Issued Jan 2023</li>
-        <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/ZE9KGDQGCMGR">ZE9KGDQGCMGR</a></li>
-    </ul>
-    <h2>Google's Foundation of Project Management</h2>
-    <ul>
-        <li>Issued Jan 2023</li>
-        <li>Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/F9DFS8WWBYG9">F9DFS8WWBYG9</a></li>
-    </ul>
-    <h2>Turkcell Geleceği Yazanlar C# and Unity Bootcamp</h2>
-    <ul>
-        <li>Issued Jan 2023</li>
-        <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkMzYwNDFxaWQxMjZlbmQ=">Credential C#</a></li>
-        <li><a href="https://gelecegiyazanlar.turkcell.com.tr/certificate/dWlkMjc5MDE1Y2lkNTc2cWlkNjNlbmQ">Credential Unity</a></li>
-    </ul>
-    <h2>IELTS Academic B2</h2>
-    <br/>
-    <h1>Skills And Languages ⭐️</h1>
-    <hr/>
-    <br/>
-    <ul>
-        <li>C, C#, Python, HTML, Shell</li>
-        <li>Project Management, Problem Solving, Strategic Thinking and Creative Writing</li>
-        <li>Unity, Blender and Photoshop</li>
-        <br/>
-        <li>Native Turkish</li>
-        <li>B2 English</li>
-        <li>A1 Japanese</li>
-        <li>A1 German</li>
-    </ul>
-
+    </div>
+    <div class="skills">
+        <h1>Skills</h1>
+        <hr/>
+        <ul>
+            <li>C, C#, Python, Shell, HTML, CSS</li>
+            <li>Project Management, Problem Solving, Strategic Thinking and Creative Writing</li>
+            <li>Unity, Blender and Photoshop</li>
+            <li>Native Turkish, B2 English, A1 Japanese and A1 German</li>
+        </ul>
+    </div>
+    <div class="contact">
+        <h1>Contact</h1>
+        <hr/>
+            <h2>Cell:</h2>
+                <h3>+48 516112852</h3>
+            <h2>Email:</h2>
+                <h3>egemeneriin@icloud.com</h3>
+            <h2>Address:</h2>
+                <h3>Poland, Poznan</h3>
+                <h3>Os. Stare Zegrze 181 Lok 15</h3>
+                <h3>61-249</h3>
+    </div>
+    <div class="links">
+        <h1>Links and Projects</h1>
+        </hr>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/egemen-erin-3abb73259/">Linkedin</a></li>
+            <li><a href="https://www.linkedin.com/in/egemen-erin-3abb73259/">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/egemen-erin-3abb73259/">Projects</a></li>
+        </ul>
+        <img src="./assets/github-11-256.png"></img>
+    </div>
 </body>
 </html>
